src/css/custom.css
/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */

/* You can override the default Infima variables here. */
:root {
  --ifm-color-primary: #00568c;
  --ifm-color-primary-dark: #004d7e;
  --ifm-color-primary-darker: #004169;
  --ifm-color-primary-darkest: #003454;
  --ifm-color-primary-light: #005f9a;
  --ifm-color-primary-lighter: #006caf;
  --ifm-color-primary-lightest: #0078c4;

  --ifm-color-neutral: #7b7b7b;
  --ifm-color-neutral-dark: #555555;
  --ifm-color-neutral-darker: #434343;
  --ifm-color-neutral-darkest: #262626;
  --ifm-color-neutral-light: #c4c4c4;
  --ifm-color-neutral-lighter: #dfdfdf;
  --ifm-color-neutral-lightest: #f9f9f9;

  /* Hex codes for rgba opacity with variables */
  --ifm-color-neutral-light-rgb: 196, 196, 196;

  --ifm-color-black: #000000;
  --ifm-color-white: #fff;

  --ifm-code-font-size: 95%;

  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);

  --ifm-color-radar-opeartion: #3c6ead;
  --ifm-color-radar-application: #2e7d32;
  --ifm-color-radar-security: #d32f2f;
  --ifm-color-radar-maintenance: #ed6c02;
  --ifm-color-search-radar-label: lightgray;
  --ifm-color-search-radar-border: lightgray;
  --ifm-color-search-radar-border-hover: #3c6ead;

  --ifm-image-portal: url("../../static/img/hero.png");
}

/* For readability concerns, you should choose a lighter palette in dark mode. */
[data-theme="dark"] {
  /* --ifm-color-primary: #35b4e6;
  --ifm-color-primary-dark: #1cabe3;
  --ifm-color-primary-darker: #178ebd;
  --ifm-color-primary-darkest: #137297;
  --ifm-color-primary-light: #4ebde9;
  --ifm-color-primary-lighter: #74cbee;
  --ifm-color-primary-lightest: #9ad9f2; */

  --ifm-color-primary-lightest: #00568c;
  --ifm-color-primary-lighter: #004d7e;
  --ifm-color-primary-light: #004169;
  --ifm-color-primary-darkest: #003454;
  --ifm-color-primary-darker: #005f9a;
  --ifm-color-primary-dark: #006caf;
  --ifm-color-primary: #0078c4;

  --ifm-color-neutral: #7b7b7b;
  --ifm-color-neutral-dark: #c4c4c4;
  --ifm-color-neutral-darker: #d9d9d9;
  --ifm-color-neutral-darkest: #e9e9e9;
  --ifm-color-neutral-light: #555555;
  --ifm-color-neutral-lighter: #222222;
  --ifm-color-neutral-lightest: #0c0c0c;

  /* Hex codes for rgba opacity with variables */
  --ifm-color-neutral-light-rgb: 85, 85, 85;

  --ifm-code-font-size: 95%;
  /* --ifm-heading-color: #25a0c2; */

  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);

  --ifm-color-radar-opeartion: #25a0c2;
  --ifm-color-radar-application: #55b55a;
  --ifm-color-radar-security: #cf6969;
  --ifm-color-radar-maintenance: #eba063;
  --ifm-color-search-radar-label: lightgray;
  --ifm-color-search-radar-border: lightgray;
  --ifm-color-search-radar-border-hover: #3c6ead;

  --ifm-image-portal: url("../../static/img/hero.png");
}

.hero .hero__subtitle {
  font: var(--ifm-heading-font-family);
  font-weight: var(--ifm-font-weight-bold);
  font-size: 35px;
  justify-content: "center";
  align-items: "center";
  color: var(--ifm-color-neutral-darkest);
}

.hero {
  background-color: var(--ifm-color-neutral-lightest);
}

.tagline {
  text-align: left;
  display: flex;
}

.bgimg {
  display: flex;
  background-image: var(--ifm-image-portal);
  background-position: center bottom;
  background-repeat: no-repeat;
  position: relative;
  background-size: contain;
}

.heading {
  padding: 32px;
  font-size: 35px;
  font-style: normal;
  font-weight: 700;
  line-height: 149.523%; /* 52.333px */
}

.heading-center {
  margin-top: 12px;
  text-align: center;
}

.footer--dark {
  background-color: var(--ifm-color-black);
  color: var(--ifm-color-white);
  text-align: center;
}

.footer--dark .footer__items :hover {
  color: var(--ifm-color-primary-lightest);
}

.footer__copyright {
  margin-top: 40px;
  color: #c4c4c4;
}

.button--primary {
  color: white;
  background-color: #0078c4;
}
.button--primary:hover {
  color: white;
  background-color: #00568c;
}

html[data-theme="dark"] .navbar .navbar__logo {
  content: url(/img/logo-dark.png);
}

.sliderStyle {
  align-items: center;
  justify-content: center;
  text-align: center;
  color: #ffffff;
  display: flex;
  padding-bottom: 20px;
}

.partnerStyle {
  font: var(--ifm-heading-font-family);
  text-align: center;
}

p > img {
  border-radius: 8px;
}

@media only screen and (max-width: 768px) {
  /* For mobile phones: */
  .hero .hero__subtitle {
    font-size: 18px;
  }
  .tagline {
    width: 50px;
  }
  .hero .button--primary {
    width: 150px;
    font-size: 12px;
  }
  .hero .bgimg {
    background-position: center;
  }
}

